--- a/OncoCalculatorCS/OncoCalculatorCS.csproj
+++ b/OncoCalculatorCS/OncoCalculatorCS.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Drugs.cs" />
+    <Compile Include="Classes\Patient.cs" />
     <Compile Include="Classes\Scheme.cs" />
     <Compile Include="Forms\EditDrug.cs">
       <SubType>Form</SubType>
@@ -88,6 +89,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\DataSources\MainForm.datasource" />
     <None Include="Properties\Settings.settings">
@@ -105,6 +107,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Flat-Icons.com-Square-Pill.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
