--- a/OncoCalculatorCS/OncoCalculatorCS.csproj
+++ b/OncoCalculatorCS/OncoCalculatorCS.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Forms\EditDrug.Designer.cs">
       <DependentUpon>EditDrug.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\EditPatients.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\EditPatients.Designer.cs">
+      <DependentUpon>EditPatients.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\EditScheme.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,6 +80,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\EditDrug.resx">
       <DependentUpon>EditDrug.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\EditPatients.resx">
+      <DependentUpon>EditPatients.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\EditScheme.resx">
       <DependentUpon>EditScheme.cs</DependentUpon>
